--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -359,3 +359,21 @@
   </div>
 </div>
 
+<script>
+  document.addEventListener("turbo:load", () => {
+    const form = document.querySelector("form[remote=true]");
+
+    if (form) {
+      form.addEventListener("ajax:success", (event) => {
+        const [data, _status, _xhr] = event.detail;
+        const propertiesContainer = document.getElementById("list-type");
+        propertiesContainer.innerHTML = data;
+      });
+
+      form.addEventListener("ajax:error", (event) => {
+        console.error("AJAX request failed:", event.detail);
+      });
+    }
+  });
+</script>
+
