resolved the issues implement ransack gem and ajax to the collection page also implement smtp

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -4,6 +4,10 @@
 body{
   color: #777;
 }
+.main-nav .myli.active a{
+    background: none !important;
+    box-shadow: none !important;
+}
 a{
     text-decoration: none;
 }
