--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,6 +5,13 @@
     padding-top: 5px !important;
 
 }
+.main-nav .myli.active a{
+    background: none !important;
+    box-shadow: none !important;
+}
+.lb{
+  padding-left: none !important;
+}
 a{
     text-decoration: none;
 }
