--- a/app/assets/stylesheets/wishlists.scss
+++ b/app/assets/stylesheets/wishlists.scss
@@ -9,6 +9,10 @@
 body{
   color: #777;
 }
+.main-nav .myli.active a{
+    background: none !important;
+    box-shadow: none !important;
+}
 a{
     text-decoration: none;
 }
