--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NewRealEstate</title>
+    <title>Bahadur Real Estate</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,19 +14,13 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %><%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>    <%# Modernizr loaded via CDN (traditional script tag) to access DOM immediately %><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script><%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %></head>  <body><%= render "shared/top_header" %>    <%= render "shared/navbar" %>
 
     <% if flash[:notice] %>
-      
-
-                             
-                        
-                        <div class="alert alert-danger alert-dismissible fade in" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>                        
-                        
-                        <%= flash[:notice] %>
-                    </div>  
-                     
-      <% end %>
+      <div class="alert alert-success alert-dismissible fade in container" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>                        
+        <%= flash[:notice] %>
+      </div>                 
+    <% end %>
 
       <%= yield %>
       <%= render "shared/footer" %>
