--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,94 +1,120 @@
-<div class="page-head"> 
-            <div class="container">
-                <div class="row">
-                    <div class="page-head-content">
-                        <h1 class="page-title">Contact page</h1>               
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End page header -->
 
-        <!-- property area -->
-        <div class="content-area recent-property padding-top-40" style="background-color: #FFF;">
-            <div class="container">  
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2"> 
-                        <div class="" id="contact1">                        
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <h3><i class="fa fa-map-marker"></i> Address</h3>
-                                    <p>13/25 shibuia
-                                        <br>Tokyo 
-                                        <br>45Y 73J 
-                                        <br>
-                                        <strong>Japan</strong>
-                                    </p>
-                                </div>
-                                <!-- /.col-sm-4 -->
-                                <div class="col-sm-4">
-                                    <h3><i class="fa fa-phone"></i> Call center</h3>
-                                    <p class="text-muted">This number is toll free if calling from
-                                        Great Britain otherwise we advise you to use the electronic
-                                        form of communication.</p>
-                                    <p><strong>+33 555 444 333</strong></p>
-                                </div>
-                                <!-- /.col-sm-4 -->
-                                <div class="col-sm-4">
-                                    <h3><i class="fa fa-envelope"></i> Electronic support</h3>
-                                    <p class="text-muted">Please feel free to write an email to us or to use our electronic ticketing system.</p>
-                                    <ul>
-                                        <li><strong><a href="mailto:">info@company.com</a></strong>   </li>
-                                        <li><strong><a href="#">Ticketio</a></strong> - our ticketing support platform</li>
-                                    </ul>
-                                </div>
-                                <!-- /.col-sm-4 -->
-                            </div>
-                            <!-- /.row -->
-                            <hr>
-                            <div id="map"></div>
-                            <hr>
-                            <h2>Contact form</h2>
-                            <form>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="firstname">Firstname</label>
-                                            <input type="text" class="form-control" id="firstname">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="lastname">Lastname</label>
-                                            <input type="text" class="form-control" id="lastname">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="email">Email</label>
-                                            <input type="text" class="form-control" id="email">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="subject">Subject</label>
-                                            <input type="text" class="form-control" id="subject">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <label for="message">Message</label>
-                                            <textarea id="message" class="form-control"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 text-center">
-                                        <button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Send message</button>
-                                    </div>
-                                </div>
-                                <!-- /.row -->
-                            </form>
-                        </div>
-                    </div>    
-                </div>
+<div class="page-head">
+  <div class="container">
+    <div class="row">
+      <div class="page-head-content">
+        <h1 class="page-title">Contact page</h1>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End page header -->
+
+<!-- property area -->
+<div class="content-area recent-property padding-top-40" style="background-color: #FFF;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <div id="contact1">
+          <div class="row">
+
+            <div class="col-sm-4">
+              <h3><i class="fa fa-map-marker"></i> Address</h3>
+              <p>
+                13/25 shibuia <br>
+                Tokyo <br>
+                45Y 73J <br>
+                <strong>Japan</strong>
+              </p>
             </div>
+
+            <div class="col-sm-4">
+              <h3><i class="fa fa-phone"></i> Call center</h3>
+              <p class="text-muted">
+                This number is toll free if calling from Great Britain otherwise
+                we advise you to use the electronic form of communication.
+              </p>
+              <p><strong>+33 555 444 333</strong></p>
+            </div>
+
+            <div class="col-sm-4">
+              <h3><i class="fa fa-envelope"></i> Electronic support</h3>
+              <p class="text-muted">
+                Please feel free to write an email to us or to use our electronic
+                ticketing system.
+              </p>
+              <ul>
+                <li>
+                  <strong>
+                    <%= mail_to "info@company.com" %>
+                  </strong>
+                </li>
+                <li>
+                  <strong><%= link_to "Ticketio", "#" %></strong>
+                  - our ticketing support platform
+                </li>
+              </ul>
+            </div>
+
+          </div>
+          <!-- /.row -->
+
+          <hr>
+          <%# <div id="map"></div> %>
+          <hr>
+
+          <h2>Contact form</h2>
+
+          <%= form_with url: pages_contact_path, method: :post, local: true do |f| %>
+            <div class="row">
+
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <%= f.label :firstname, "Firstname" %>
+                  <%= f.text_field :firstname, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <%= f.label :lastname, "Lastname" %>
+                  <%= f.text_field :lastname, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <%= f.label :email, "Email" %>
+                  <%= f.text_field :email, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <%= f.label :subject, "Subject" %>
+                  <%= f.text_field :subject, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <%= f.label :message, "Message" %>
+                  <%= f.text_area :message, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-sm-12 text-center">
+                <button type="submit" class="btn btn-primary">
+                  <i class="fa fa-envelope-o"></i> Send message
+                </button>
+              </div>
+
+            </div>
+            <!-- /.row -->
+          <% end %>
+
         </div>
+      </div>
+    </div>
+  </div>
+</div>
