--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,15 @@
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag 'bootstrap-select.min', media: 'all' %>
+    <%# <%= stylesheet_link_tag 'bootstrap-select.min', media: 'all' %> %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <%# Modernizr loaded via CDN (traditional script tag) to access DOM immediately %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+    <%= render "shared/top_header" %>
+    <%= render "shared/navbar" %>
     <% if flash[:notice] %>
       <div class="alert alert-success alert-dismissible fade in container" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
