remove some restrictions from the Admin

--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -63,7 +63,7 @@
 
           <!-- Actions -->
           <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center">
-            <%= link_to "Go to Dashboard", root_path, class: "btn btn-success px-4" %>
+            <%= link_to "Go to Home", root_path, class: "btn btn-success px-4" %>
             <%= link_to "View Properties", properties_path, class: "btn btn-outline-secondary px-4" %>
           </div>
 
