--- a/app/views/layouts/agent_layout.html.erb
+++ b/app/views/layouts/agent_layout.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="/property.png">
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800', rel: 'stylesheet' %>
     <link rel="stylesheet"
