--- a/app/views/users/agent_new.html.erb
+++ b/app/views/users/agent_new.html.erb
@@ -49,4 +49,9 @@
 
                                     <div class="col-md-4 col-xs-4"></div>
 
-                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                <p>  you already have an existing account<%= link_to "login", login_agent_path %></p>                        </div>                                </div>                                </div>                                </div>                                </div>
+                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                <p>  you already have an existing account<%= link_to "login", login_agent_path %></p>          
+                                    <%= button_to "Login with Google",
+                                                                                "/oauth/google_oauth2",
+                                                                                method: :post,
+                                                                                data: { turbo: false },
+                                                                                class: "login-social" %>               </div>                                </div>                                </div>                                </div>                                </div>
